fix padding right on scrollbar sidebar firefox browser

--- a/src/themes/_common/player/gallery-sidebar.scss
+++ b/src/themes/_common/player/gallery-sidebar.scss
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-right: 2px;
+    padding-right: 4px;
 
     .#{$cssgallerysidebar}-header-container {
         box-sizing: border-box;
@@ -99,6 +99,7 @@
         @supports ( -moz-appearance:none ){
             scrollbar-color: #b3b3b3 #1f1f1f;
             scrollbar-width: thin;
+            padding-right: 5px;
         }
     }
 
